Fixing form button alignment in Vendor Dashboard

--- a/asset/css/pages/_product.scss
+++ b/asset/css/pages/_product.scss
@@ -86,3 +86,13 @@
 .dokan-dashboard .dokan-form-group.dokan-product-type-container.show_if_subscription.show_if_variable-subscription.show_if_simple {
     display: none !important;
 }
+
+.dokan-w4.ajax_prev.dokan-text-left {
+    margin-left: 0 !important;
+    margin-top: 16px;
+}
+
+.dokan-w3.ajax_prev {
+  margin-left: 0 !important;
+  text-align: left !important;
+}
